--- a/groups/templates/groups/show.html
+++ b/groups/templates/groups/show.html
@@ -1,7 +1,7 @@
 {% extends "layout.html"%}
 
 {% block body %}
-<div style=" background-image: url({{group.cover.url}});width:100%%;height:300px;background-size: 100% 300px;cursor: pointer;background-repeat: no-repeat;">
+<div style=" background-image: {% if group.cover != '' %} url({{group.cover.url}}){% else %}url(/images/Default.jpg){% endif %};width:100%%;height:300px;background-size: 100% 300px;cursor: pointer;background-repeat: no-repeat;">
 </div>
 <div class="d-flex justify-content-between" style="background-color:#e44d3a; padding:10px;color: white;">
   <div class="" >
@@ -10,7 +10,7 @@
   </div>
   <div class="d-flex align-items-end">
  
-    <a  href="{% url "invite" %}"><i class="fa fa-users fa-2x m-3" aria-hidden="true" style="color:white"></i></a>
+    <a  href="{% url "invite" group.id %}"><i class="fa fa-users fa-2x m-3" aria-hidden="true" style="color:white"></i></a>
      <a><i class="fa fa-user-plus fa-2x m-3" aria-hidden="true"></i></a>
      <a onclick=""><i class="fas fa-door-open fa-2x m-3" aria-hidden="true"></i></a>
 
