send friend requests to others and changes status

--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -29,7 +29,7 @@
                     <div class="profile-usertitle-job">
                     </div>
                 </div>
- <!---------------------------------------------------------------------------------------------------------------------------->
+                <!---------------------------------------------------------------------------------------------------------------------------->
                 <div>
                     <!-- THEM to YOU -->
                     {% if checker.request_sent == 0 %}
@@ -55,7 +55,7 @@
                     <!-- No requests have been sent -->
                     {% if checker.request_sent == -1 %}
                     <div class="profile-userbuttons">
-                        <button class="post btn btn-sm"><i class="fas fa-user-plus"></i>
+                        <button class="post btn btn-sm" id="id_send_friend_request_btn"><i class="fas fa-user-plus"></i>
                             Send Friend Request
                         </button>
                     </div>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     {% endif %}
-            <!--------- need more implementation ------------>
+                    <!--------- need more implementation ------------>
                     <!-- Friend list link -->
                     <div class="profile-userbuttons">
                         <a>
@@ -81,7 +81,7 @@
                         </a>
                     </div>
                 </div>
-                <!------->
+                <!------------------- ONE OF THEM SHOULD BE DELETED  ----------->
                 {% if checker.friend_requests %}
                 <div class="profile-userbuttons">
                     <!-- Friend requests -->
@@ -90,6 +90,20 @@
                             <div class="d-flex flex-row align-items-center justify-content-center icon-container">
                                 <span class="material-icons mr-2 person-add-icon">person_add</span><span
                                     class="friend-text">Friend Requests </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
+                <!------    SECOND OF THEM SHOULD BE DELETED   --------------->
+                {% if friend_requests %}
+                <div class="card m-2 px-4 pb-4">
+                    <!-- Friend requests -->
+                    <div class="d-flex flex-column pt-4">
+                        <a href="#">
+                            <div class="d-flex flex-row align-items-center justify-content-center icon-container">
+                                <span class="material-icons mr-2 person-add-icon">person_add</span><span
+                                    class="friend-text">Friend Requests ({{friend_requests|length}})</span>
                             </div>
                         </a>
                     </div>
@@ -105,7 +119,7 @@
                     <span class="message-btn-text m-auto pl-2">Message</span>
                 </div>
                 {% endif %}
-<!----------------------------------------------------------------------------------------------------------------------------->
+                <!----------------------------------------------------------------------------------------------------------------------------->
                 <div class="profile-usermenu">
                     <ul style="list-style: none;">
                         {% if checker.is_self == False %}
@@ -144,4 +158,57 @@
         </div>
     </div>
 </div>
+
+
+<script type="text/javascript" >
+
+function onFriendRequestSent(){
+    location.reload();
+
+}
+
+var sendFriendRequestBtn = document.getElementById("id_send_friend_request_btn")
+if (sendFriendRequestBtn != null){
+    sendFriendRequestBtn.addEventListener("click", function(){
+    sendFriendRequest("{{account.id}}", onFriendRequestSent)
+})
+}
+
+
+
+	
+function sendFriendRequest(id, uiUpdateFunction){
+    //alert(id);
+	payload = {
+		"csrfmiddlewaretoken": "{{ csrf_token }}",
+			"receiver_user_id": id,
+		}
+    $.ajax({
+		type: 'POST',
+		dataType: "json",
+		url: "{% url 'friend:friend-request' %}",
+		timeout: 5000,
+		data: payload,
+        success: function(data) {
+				console.log("SUCCESS", data)
+				if(data['response'] == "Friend request sent."){
+					// ui is updated
+				}
+				else if(data['response'] != null){
+					alert(data['response'])
+				}
+			},
+		error: function(data) {
+			console.error("ERROR...", data)
+			alert("Something went wronghhhhhh.")
+			},
+		complete: function(data){
+		uiUpdateFunction()
+		}
+	});
+}
+	
+
+</script>
+
 {% endblock %}
