--- a/msgnotifications/templates/notificationIndex.html
+++ b/msgnotifications/templates/notificationIndex.html
@@ -8,33 +8,20 @@
         <!---------------------------------------------------- side ------------------------------------------------------------>
         <div class="col-sm-8">
 
-            <div class="mycard">
-                <form action="" method="GET">
-                    <input type="text" name="q" id="" class="post_input " placeholder=" Search for user by name">
-                    <input type="submit" class="btn mt-2" value="Search"></a>
-                </form>
-            </div>    
+            <div class="mycard post-topbar" style="height:800px;overflow-y:scroll" >
+           
 
-            <div class="mycard" style="height:500px;overflow-y:scroll" >
-            <h2>Chats</h2>
-
-            {% for friend in friends %}
-            <hr>
-                {% if msgto == friend.username %}
-                    <a href="?id={{ friend.id }}" style="color:black;">
-                    <div class="d-flex justify-content-center align-items-center" style="background-color:#f88b7c;"id="chatdiv">
-                        <div class="mx-2">{{friend.username}}</div>
-                        <img class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png' %}">
-                    </div>
-                     </a> 
-                {% else %}
-                    <a href="?id={{ friend.id }}" style="color:black;">
-                    <div class="d-flex justify-content-center align-items-center" id="chatdiv">
-                        <div class="mx-2">{{friend.username}}</div>
+            {% for notification in notifications %}
+          
+               {% if notification.notifyType == "postView"%}
+                    <a href="{% url "view" notification.instance_id%}" style="color:black;">
+                    <div class="mycard d-flex justify-content-center align-items-center" id="chatdiv">
+                        <div class="mx-2">{{notification.text}}</div>
                         <img class="  m-1 rounded-circle"  src="{% static 'images/exPP3.png' %}">
                     </div>
                      </a>
-                {% endif %}  
+                {% endif %}     
+           
               
             <hr>
             {% endfor %} 
