--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -36,7 +36,7 @@
                     <div class="card m-2 p-4">
                         <div class="d-flex flex-row align-items-center">
                             <span class="friend-text align-items-center mr-2">Accept Friend Request</span>
-                            <span id="id_cancel_{{id}}">cancel</span>
+                            <span id="id_cancel_{{id}}" class="decline-friend-request material-icons p-1" onclick='triggerDeclineFriendRequest("{{pending_friend_request_id}}")'>cancel</span>
                             <span id="id_confirm_{{id}}">check</span>
                         </div>
                     </div>
@@ -209,8 +209,14 @@
             }
         });
     }
+    function triggerDeclineFriendRequest(friend_request_id){
+        declineFriendRequest(friend_request_id,onFriendRequestDeclined)
+    }
+
+    
 
 
 </script>
+{% include 'friend/snippets/decline_friend_request.html' %}
 
 {% endblock %}
