--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -8,9 +8,9 @@
             <div class="profile-sidebar">
                 <div class="profile-userpic" style="display: flex;justify-content: center;">
                     {% if checker.is_self == False %}
-                    <img src="{{account.userprofile.avatar.url}}" class="img-responsive" alt="">
+                    <img src="{% if user.userprofile.avatar %} {{account.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}" class="img-responsive" alt="">
                     {% else %}
-                    <img src="{{user.userprofile.avatar.url}}" class="img-responsive" alt="">
+                    <img src="{% if user.userprofile.avatar %} {{user.userprofile.avatar.url}} {% else %} /images/avatars/profile.jpeg {% endif %}" class="img-responsive" alt="">
                     {% endif %}
 
                 </div>
@@ -179,36 +179,36 @@
 
 
 
-    function sendFriendRequest(id, uiUpdateFunction) {
-        //alert(id);
-        payload = {
-            "csrfmiddlewaretoken": "{{ csrf_token }}",
-            "receiver_user_id": id,
-        }
-        $.ajax({
-            type: 'POST',
-            dataType: "json",
-            url: "{% url 'friend:friend-request' %}",
-            timeout: 5000,
-            data: payload,
-            success: function (data) {
-                console.log("SUCCESS", data)
-                if (data['response'] == "Friend request sent.") {
-                    // ui is updated
-                }
-                else if (data['response'] != null) {
-                    alert(data['response'])
-                }
-            },
-            error: function (data) {
-                console.error("ERROR...", data)
-                alert("Something went wronghhhhhh.")
-            },
-            complete: function (data) {
-                uiUpdateFunction()
-            }
-        });
-    }
+    // function sendFriendRequest(id, uiUpdateFunction) {
+    //     //alert(id);
+    //     payload = {
+    //         "csrfmiddlewaretoken": "{{ csrf_token }}",
+    //         "receiver_user_id": id,
+    //     }
+    //     $.ajax({
+    //         type: 'POST',
+    //         dataType: "json",
+    //         url: "{% url 'friend:friend-request' %}",
+    //         timeout: 5000,
+    //         data: payload,
+    //         success: function (data) {
+    //             console.log("SUCCESS", data)
+    //             if (data['response'] == "Friend request sent.") {
+    //                 // ui is updated
+    //             }
+    //             else if (data['response'] != null) {
+    //                 alert(data['response'])
+    //             }
+    //         },
+    //         error: function (data) {
+    //             console.error("ERROR...", data)
+    //             alert("Something went wronghhhhhh.")
+    //         },
+    //         complete: function (data) {
+    //             uiUpdateFunction()
+    //         }
+    //     });
+    // }
     function triggerDeclineFriendRequest(friend_request_id){
         declineFriendRequest(friend_request_id,onFriendRequestDeclined)
     }
@@ -217,6 +217,7 @@
 
 
 </script>
+{% include 'friend/snippets/send_friend_request.html' %}
 {% include 'friend/snippets/decline_friend_request.html' %}
 
 {% endblock %}
