update login and signup

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -43,7 +43,7 @@
 
                 </div>
                 <div class="col-4">
-                    <h4 style="text-align:right;  text-decoration: underline;"class="mr-5 mt-2"><a  href="/" id="navLink">signup</a></h4>   
+                    <h4 style="text-align:right;  text-decoration: underline;"class="mr-5 mt-2"><a  href="/signup" id="navLink">signup</a></h4>   
                 </div>
 
             </div>
