--- a/accounts/templates/profileLayout.html
+++ b/accounts/templates/profileLayout.html
@@ -203,41 +203,13 @@
 
     
 
-    function cancelFriendRequest(id, uiUpdateFunction){
-        payload = {
-            "csrfmiddlewaretoken": "{{ csrf_token }}",
-            "receiver_user_id": id,
-        }
-        $.ajax({
-            type: 'POST',
-			dataType: "json",
-			url: "{% url 'friend:friend-request-cancel' %}",
-            data: payload,
-			timeout: 5000,
-            success: function(data) {
-				console.log("SUCCESS", data)
-				if(data['response'] == "Friend request cancelled."){
-					// ui is updated
-				}
-				else if(data['response'] != null){
-					alert(data['response'])
-				}
-			},
-			error: function(data) {
-				console.error("ERROR...", data)
-				alert("Something went wrong.")
-			},
-			complete: function(data){
-				uiUpdateFunction()
-			}
-            
-        });
-    }
+ 
 
 </script>
 {% include 'friend/snippets/send_friend_request.html' %}
 {% include 'friend/snippets/decline_friend_request.html' %}
 {% include 'friend/snippets/accept_friend_request.html' %}
+{% include 'friend/snippets/cancel_friend_request.html' %}
 
 
 {% endblock %}
