--- a/groups/templates/groups/show.html
+++ b/groups/templates/groups/show.html
@@ -10,8 +10,8 @@
   </div>
   <div class="d-flex align-items-end">
  
-    <a  href="{% url "invite" group.id %}"><i class="fa fa-users fa-2x m-3" aria-hidden="true" style="color:white"></i></a>
-     <a><i class="fa fa-user-plus fa-2x m-3" aria-hidden="true"></i></a>
+    <a  ><i class="fa fa-users fa-2x m-3" aria-hidden="true" style="color:white"></i></a>
+     <a href="{% url "invite" group.id %}"><i class="fa fa-user-plus fa-2x m-3" aria-hidden="true" style="color:white"></i></a>
      <a onclick=""><i class="fas fa-door-open fa-2x m-3" aria-hidden="true"></i></a>
 
   </div>
